--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ body {
     display: block;
     width: 27px;
     height: 27px;
-    background-image: url(/img/navbar-logo.svg);
+    background-image: url(../img/navbar-logo.svg);
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -317,7 +317,7 @@ body {
 }
 
 .autor__avatar {
-    background-image: url(/img/autor-avatar.svg);
+    background-image: url(../img/autor-avatar.svg);
     background-repeat: no-repeat;
     background-position: center;
     width: 64px;
